Fixed problem with text overflow for translation keys

--- a/app/modules/translations/views/translations/_translations.scss
+++ b/app/modules/translations/views/translations/_translations.scss
@@ -36,6 +36,7 @@
   }
   .translations-text {
     margin-left: 40px;
+    word-wrap: break-word;
   }
 }
 
